--- a/src/pages/Contact.css
+++ b/src/pages/Contact.css
@@ -198,6 +198,7 @@
 
 @media screen and (max-width: 650px) and (min-width:0px){
     .header{
+        display: block;
         font-size: 40px;
     }
     .head{
