--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -74,14 +74,56 @@ body{
     width: 20px;
     height:auto;
     opacity: 0.6;
+    animation: blue1 10s linear infinite;
+    /* border: 1px solid red; */
+}
+@keyframes blue1 {
+    0%{
+        top: 35%;
+        left: 0%;
+        opacity: 0.6;
+    }
+    50%{
+        top: 20%;
+        left: 20%;
+        width: 60px;
+        opacity: 1;
+    }
+    100%{
+        top: 0%;
+        left: 34%;
+        width: 20px;
+        opacity: 0.3;
+
+    }
+    
 }
 .banner .blue2{
     position: absolute;    
     top: 50%;
-    left: 25%;
+    left: 10%;
+    background-color: rgb(4, 90, 204);
     width: 20px;
-    height:auto;
+    height:20px;
     opacity: 0.6;
+    animation: blue2 10s linear infinite;
+}
+@keyframes blue2{
+
+    from{
+        top: 50%;
+        left: 10%;
+        transform: rotateX(0deg) rotateZ(0deg) scale(0.8);
+        
+    }
+    to{
+        top: 100%;
+        left: 50%;
+        scale: 1;
+        transform: rotateX(500deg) rotateZ(1000deg) scale(1.5);
+
+    }
+
 }
 
 .banner .blue3{
@@ -91,73 +133,246 @@ body{
     width: 50px;
     height:auto;
     opacity: 1;
+    animation: blue3 3s linear alternate infinite;
+}
+@keyframes blue3 {
+
+    0%{
+        width: 75px;
+        opacity: 0.5;
+    }
+    50%{
+        width: 50px;
+        opacity: 0.7;
+
+    }
+    100%{
+        width: 25px;
+        opacity: 1;
+
+    }
+
+
 }
 
 .banner .blue4{
     position: absolute;    
-    top: 65%;
-    left: 50%;
-    width: 10px;
+    top: 100%;
+    left: 20%;
+    width: 15px;
     height:auto;
     opacity: 0.6;
+    animation: blue4 12s linear infinite;
+}
+@keyframes blue4 {
+
+    from{
+        top: 98%;
+        left: 40%;
+    }to{
+        top: 45%;
+        left: 70%;
+        
+    }
 }
 
 
-.banner .blue5{
+
+.banner .yellow2{
     position: absolute;    
-    top: 12%;
-    left: 8%;
-    width: 10px;
-    height:auto;
-    opacity: 0.3;
+    top: 45%;
+    left:98%;
+    width: 12px;
+    height:12px;
+    opacity: 0.8;
+    border-radius: 50%;
+    background-color: rgb(241, 225, 0);
+    animation: yellow2 15s linear infinite;
+
+}
+@keyframes yellow2 {
+
+    from{
+        top: 45%;
+        left: 98%;
+    }to{
+        top: 0%;
+        left: 70%;
+        
+    }
 }
 
 .banner .greenRect1{
     position: absolute;    
-    top: 50%;
-    left: 95%;
+    top: 40%;
+    left: 75%;
     width: 40px;
     height:auto;
-    opacity: 0.6;
+    opacity: 1.0;
+    animation: greenRect1 10s linear infinite;
+}
+
+@keyframes greenRect1 {
+    from{
+        top: 40%;
+        left: 75%;
+        transform: rotateX(0deg)  rotateZ(0deg);
+    }
+    to{
+        top: 80%;
+        left: 100%;
+        transform: rotateX(360deg)  rotateZ(-360deg);
+        opacity: 0.4;
+    }
 }
 
 .banner .greenCircle1{
     position: absolute;    
-    top: 6%;
+    top: 0%;
     left: 70%;
     width: 12px;
     height:auto;
     opacity: 0.6;
+    animation: greenCircle1 4s linear infinite;
+}
+@keyframes greenCircle1 {
+
+    from{
+    top: 0%;
+    left: 70%;
+    opacity: 0.6;
+    width: 12px;
+
+    }to{
+
+    top: 13%;
+    left: 80%;
+    opacity: 1;
+    width: 25px;
+        
+    }
 }
 
+
 .banner .greenCircle2{
-    position: absolute;    
-    top: 2.5%;
+    position: absolute;  
+    background-color: green;  
+    top: 0.5%;
     left: 60%;
     width: 35px;
-    height:auto;
-    opacity: 1;
+    height:35px;
+    opacity: 0.7;
+    border-radius: 50%;
+    animation: greenCircle2 8s linear infinite;
+}
+@keyframes greenCircle2{
+
+    0%{
+        top: 0%;
+        left: 60%;
+        opacity: 0.7;
+        border-radius: 50%;
+    }
+    20%{
+        top: 5%;
+        left: 55%;
+        opacity: 0.6;
+
+    }
+    40%{
+        top: 10%;
+        left: 50%;
+        opacity: 0.5;
+    }
+    50%{
+        top: 11%;
+        left: 48%;
+        opacity: 0.4;
+        border-radius: 0%;
+    }
+    60%{
+        top: 10%;
+        left: 46%;
+        opacity: 0.5;
+
+
+    }
+    80%{
+        top: 5%;
+        left: 41%;
+        opacity: 0.6;
+    }
+    100%{
+
+        top: -5%;
+        left: 36%;
+        opacity: 0.7;
+        border-radius: 50%;
+
+
+    }
+
 }
 
 
 
 .banner .yellowRect1{
-    position: absolute;    
+    position: absolute;  
+    display: block;
+    background-color: yellow;  
     top: 90%;
     left: 25%;
     width: 20px;
-    height:auto;
+    height:20px;
     opacity: 0.6;
 }
 
 
 .banner .yellowRect2{
+    display: block;
+    background-color: rgb(251, 255, 0);
     position: absolute;    
-    top: 35%;
+    top: 50%;
     left: 55%;
     width: 28px;
-    height:auto;
-    opacity: 0.8;
+    height: 28px;
+    opacity: 0.6;
+    transform: rotateZ(0deg);
+
+    animation: yellowRect2 20s alternate linear infinite;
+}
+
+@keyframes yellowRect2 {
+    0%{
+        top: 55%;
+        left: 55%;
+        opacity: 0.6;
+        transform: rotateZ(0deg);
+    }
+    33%{
+        top: 45%;
+        left: 45%;
+        opacity: 0.9;
+        transform: rotateZ(180deg);
+
+    }
+    67%{
+        top: 35%;
+        left: 60%;
+        opacity: 0.5;
+        transform: rotateZ(360deg);
+
+    }
+    100%{
+        top: 45%;
+        left: 50%;
+        transform: rotateZ(180deg);
+        opacity: 0.9;
+
+
+
+    }
+    
 }
 
 .banner .yellowCircle1{
@@ -167,15 +382,79 @@ body{
     width: 30px;
     height:auto;
     opacity: 0.4;
+    animation: yellowCircle1 10s linear infinite;
+}
+@keyframes yellowCircle1{
+
+    0%{
+        top: 10%;
+        left: 35%;
+        width: 30px;
+        opacity: 0.4;
+    }
+    30%{
+        top: 40%;
+        left: 30%;
+        width: 45px;
+        opacity: 0.9;
+    }
+    35%{
+        top: 42%;
+        left: 28%;
+        width: 50px;
+        opacity: 0.9;
+    }
+    100%{
+        top: 50%;
+        left: 0%;
+        width: 30px;
+
+        opacity: 0.1;
+
+    }
+
 }
 
 .banner .redCircle1{
     position: absolute;    
     top: 80%;
-    left: 10%;
-    width: 20px;
+    left: 5%;
+    width: 24px;
     height:auto;
-    opacity: 0.9;
+    opacity: 0.7;
+    animation: redCircle1 10s linear infinite;
+}
+
+@keyframes redCircle1 {
+    0%{
+        width: 20px;
+        opacity: 0.4;
+    }
+    30%{
+        width: 40px;
+        opacity: 0.8;
+    }
+    40%{
+        width: 32px;
+        opacity: 0.5;
+    }
+    50%{
+        width: 42px;
+        opacity: 0.9;
+    }
+    60%{
+        width: 32px;
+        opacity: 0.5;
+    }
+    70%{
+        width: 40px;
+        opacity: 0.4;
+    }
+    100%{
+        width: 20px;
+        opacity: 0.2;
+    }
+
 }
 
 .banner .redCircle2{
@@ -185,6 +464,37 @@ body{
     width: 40px;
     height:auto;
     opacity: 0.6;
+    animation: redCircle2 10s linear alternate infinite;
+}
+
+@keyframes redCircle2 {
+    0%{
+        top: 84%;
+        left: 85%;
+    }
+    20%{
+        top: 76%;
+        left: 80%;
+    }
+    45%{
+        top: 68%;
+        left: 72%;
+    }
+    65%{
+        top: 76%;
+        left: 64%;
+    }
+    80%{
+        top: 84%;
+        left: 59%;
+    } 
+    100%{
+        top: 93%;
+        left: 50%;
+    }
+   
+
+
 }
 
 /* BANNER CONTENT */
@@ -1222,6 +1532,9 @@ body{
         
            
     /* BANNER CONTENT */
+    .banner .greenCircle2{
+        display: none;
+    }
 
     
     /* BANNER BOX */
