--- a/src/pages/Contact.css
+++ b/src/pages/Contact.css
@@ -14,7 +14,6 @@
     width: 100px;
     overflow: hidden;
     z-index:100;
-
 }
 .green{
     position: absolute;
@@ -23,6 +22,7 @@
     width: 100px;
     height: auto;
     overflow: hidden;
+    
     /*border: 1px solid black; */
 
 }
@@ -33,6 +33,7 @@
     width: 100px;
     height: auto;
     overflow: hidden;
+    
     /* border: 1px soid rgb(0, 255, 136); */
 
 }
@@ -43,6 +44,7 @@
     width: 50px;
     height: auto;
     overflow: hidden;
+    
     /* border: 1px soid rgb(0, 255, 136); */
 
 }
@@ -463,6 +465,11 @@
       }
 }
 
+.sub-header-dark{
+    text-align: center;
+    font-size: 20px;
+    color: whitesmoke;
+}
 
 .sub-header{
     text-align: center;
@@ -479,6 +486,17 @@
     margin-right: 150px;
     margin-left: 150px;
     box-shadow: rgba(0, 0, 0, 0.18) 0px 2px 4px;
+}
+.box-dark{
+    display: grid;
+    grid-template-columns: 50% 50%;
+    justify-content: center;
+    margin-top: 40px;
+    border-radius: 24px;
+    margin-bottom: 100px;
+    margin-right: 150px;
+    margin-left: 150px;
+    box-shadow: rgba(255, 255, 255, 0.2) 0px 2px 4px ;
 }
 .mainbody{
     position: relative;
@@ -558,6 +576,7 @@
         grid-template-columns: 100%;
         height: 1000px;
     }
+
     .box-detail{
         grid-template-rows: 0%  70% 30%;
         
@@ -595,6 +614,7 @@
     .head{
         font-size: 30px;
         margin-top: 6vh;
+        margin-left: -20px;
     }
     .mainbody{
         position: relative;
@@ -660,6 +680,9 @@
         margin-top:5px;
         width: 10rem;
         height: 2rem;
+    }
+    .MuiFormControl-root{
+        width:17rem;
     }
     
 }
