--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -4,7 +4,9 @@
 
 
 body {
+
   font-family: "Montserrat", sans-serif;
+  /* font-family: "Montserrat", sans-serif; */
   padding: 0;
   margin: 0;
   
