--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -583,7 +583,7 @@ body{
 }
 
 
-.banner .banner_content .left_content .gdsc .banner_header_dark{
+.banner .banner_content .left_content .gdsc .banner_header_dark_home{
     color: white;
     /* background: none; */
 
@@ -737,6 +737,7 @@ body{
 
 }
 
+
 .info .about{
     margin-top: 100px;
     display: block;
@@ -776,12 +777,13 @@ body{
 .info .about .header_light{
     background: -webkit-linear-gradient(90deg, #3F3F3F 0%, #696969 51.87%, #3F3F3F 100%);
     background-clip: text;
+    color: black !important;
     /* -webkit-background-clip: text; */
     -webkit-text-fill-color: transparent;
     /* border: 1px solid red; */
 }
 
-.info .about .header_dark{
+.info .about .header_dark_home{
     color: white;
 }
 
@@ -852,7 +854,7 @@ body{
     font-family: 'Poppins', sans-serif;
     font-size: 40px;
     font-weight: 600;
-    color: white;
+    
     height: fit-content;
     /* border: 1px solid green ; */
 
@@ -2004,7 +2006,11 @@ body{
 
 
 }
-
+@media screen and (max-width:600px){
+    .info{
+        background-image: none !important;
+    }
+}
 @media screen and (max-width:340px){
 
 
