--- a/src/pages/Contact.css
+++ b/src/pages/Contact.css
@@ -477,26 +477,27 @@
 }
 .box{
     display: grid;
-    grid-template-columns: 50% 50%;
+    grid-template-columns: 100%;
     justify-content: center;
     /*height: 770px;*/
-    margin-top: 40px;
+    margin-top: 10px;
     border-radius: 24px;
     margin-bottom: 100px;
-    margin-right: 150px;
-    margin-left: 150px;
-    box-shadow: rgba(0, 0, 0, 0.18) 0px 2px 4px;
+    margin-right: 30%;
+    margin-left: 30%;
+    text-align: center;
 }
 .box-dark{
     display: grid;
-    grid-template-columns: 50% 50%;
+    grid-template-columns: 100%;
     justify-content: center;
-    margin-top: 40px;
+    /*height: 770px;*/
+    margin-top: 10px;
     border-radius: 24px;
     margin-bottom: 100px;
-    margin-right: 150px;
-    margin-left: 150px;
-    box-shadow: rgba(255, 255, 255, 0.2) 0px 2px 4px ;
+    margin-right: 30%;
+    margin-left: 30%;
+    text-align: center;
 }
 .mainbody{
     position: relative;
@@ -506,9 +507,6 @@
 }
 .head{
     font-family: 'Montserrat', sans-serif;
-}
-.box-primary{
-    display: flex;
 }
 .box-secondary{
     display: grid;
@@ -532,7 +530,7 @@
 .box-social{
     padding-top: 40px;
     display: grid;
-    grid-template-columns: 0% 30% 30% 30%;
+    grid-template-columns: 30% 30% 30%;
 }
 .mailid{
     margin-bottom: 70px;
@@ -546,46 +544,32 @@
 .header-contact{
     display: none;
 }
-
+.message-box{
+    text-align: left;
+}
 @media screen and (min-width: 1000px ){
-    .box-map{
-        display: none;
-    }
-    .images-phone{
-        display: none;
-    }
-   
 }
 @media screen and (min-width: 650px ) and (max-width:1000px){
+    .MuiInputBase-input{
 
-    
-    .images-phone{
-        display: none;
+        width:40vw !important;
     }
     .circle{
         display: none;
     }
-    .box-address{
-        display: none;
-    }
-    .box-image{
-        display: none;
-    }
     .box{
         box-shadow: none;
-        grid-template-rows: 70% 30%;
+        grid-template-rows: 100%;
         grid-template-columns: 100%;
-        height: 1000px;
     }
     .box-dark{
         box-shadow: none;
-        grid-template-rows: 70% 30%;
+        grid-template-rows: 100%;
         grid-template-columns: 100%;
-        height: 1000px;
     }
 
     .box-detail{
-        grid-template-rows: 0%  70% 30%;
+        grid-template-rows: 100%;
         
     }
     .form-message{
@@ -593,7 +577,7 @@
 
     }
     .box-mail{
-        width: 135px;
+        width: 130px;
     }
     .box-map{
         margin: 10px;
@@ -613,6 +597,10 @@
 }
 
 @media screen and (max-width: 650px) and (min-width:0px){
+    .MuiInputBase-input{
+        width:70vw !important;
+        height: 20px !important;
+    }
     .header-contact{
         justify-content: center;
         align-items: center;
@@ -625,44 +613,29 @@
     }
     .mainbody{
         position: relative;
-        height: 180vh;
+        height: 160vh;
     }
     .sub-header{
         font-size: 20px;
         text-align: center;
-    }
-    .images-desktop{
-        display: none;
-    }
-    .box-image {
-        display: none;
-    }
+    } 
     .box-address{
         display: none;
     }
-    .box-primary{
-        height: 500px;
-        justify-content: center;
-        align-items: center;
-    }
     .box{
-        grid-template-rows: 85vh 55vh;
+        grid-template-rows: 100%;
         grid-template-columns: 100%;
-        width: 329px;
         height: 140vh;
         /*border: 1px solid black;*/
-        margin-left: 30px;
         margin-bottom: 30vh;
         box-shadow: none;
         /*margin-bottom: 1000px;*/
     }
     .box-dark{
-        grid-template-rows: 85vh 55vh;
+        grid-template-rows: 100%;
         grid-template-columns: 100%;
-        width: 329px;
         height: 140vh;
         /*border: 1px solid black;*/
-        margin-left: 30px;
         margin-bottom: 30vh;
         box-shadow: none;
         /*margin-bottom: 1000px;*/
@@ -702,6 +675,21 @@
     }
     .MuiFormControl-root{
         width:17rem;
+    }
+    .box-primary{
+        width:100vh;
+        height:500px !important;
+    }
+    .box{
+        margin: 0 10% ;
+        text-align: initial !important;
+    }
+    .box-dark{
+        margin: 0 10% ;
+        text-align: initial !important;
+    }
+    .message-box:last-child{
+        text-align: center !important;
     }
     
 }
